# ed

./: .gitignore  README.md
pr1/: Dockerfile  Doxyfile  Makefile  docker-compose.yaml
pr1/gtests/: MonomioUnittest.cpp
pr1/make-files/: Makefile  config.sh
pr1/src/: main.cpp
pr1/version1/: Doxyfile  Vector3D.cpp  Vector3D.hpp  funcionesAuxiliares.cpp  makefile  principal.cpp
pr1/version2/: Vector3D.cpp  Vector3D.hpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp
pr2/: .gitignore  Doxyfile  Makefile  README.md  docker-compose.yaml  main_testing.cpp
pr2/gtests/: MonomioUnittest.cpp  PolinomioUnittest.cpp  allUnittest.cpp
pr2/main/: Provincia.hpp  main.cpp  main_testing.cpp
pr2/make-files/: Makefile  config.sh  create_temp_folder.sh
pr2/output/: Cordoba.csv  Cordoba_2.csv  Cordoba_dumped.csv
pr2/src/: main.cpp  main2.cpp  main_testing.cpp
pr2/tests/: Municipio_unittest.cpp  Provincia_unittest.cpp
pr2_profesor/: Doxyfile  Makefile
pr2_profesor/output/: Cordoba2.csv
pr2_profesor/src/: test.cpp  testProvincia.cpp
pr3/: .gitignore  CMakeLists.txt  Makefile  main.cpp
pr3/app/include/ed/Entity/: arbolbinarioordenado.hpp  arbolbinarioordenadoenlazado.hpp
pr3/app/include/ed/Generator/: generarpersona.hpp
pr3/app/src/: main.cpp  main_integers.cpp
pr3/app/src/Entity/: persona.cpp
pr3/app/src/Generator/: generarpersona.cpp
pr3/make-files/: Makefile
pr3/src/Entity/BinaryTree/: arbolbinarioordenadoenlazado.hpp
pr3_profesor/: Doxyfile  Makefile  TODO.md  commitChanges.md
pr3_profesor/output/: Cordoba.txt  (+8 more)
pr4/: CMakeLists.txt  Makefile
(+127 files in other folders)
